fixed new post css on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -667,16 +667,17 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   position: fixed;
+  overflow-y: auto;
   top: 0;
   left: 0;
   width: 100vw;
   max-width: 100vw;
   height: 100vh;
+  max-height: 100vh;
   background-color: #e5e4e4;
   z-index: 1;
-  gap: 10px;
 }
 
 .newPost {
